force-app/main/default/objects/Unit_Response__c/fields/Stage_Unit_Response__c.field-meta.xml
<CustomField>
    <fullName>Stage_Unit_Response__c</fullName>
    <label>Stage Unit Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>