force-app/main/default/objects/Unit_Response__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <formula>CASESAFEID(Module_Response__r.User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserID</label>
    <type>Text</type>
</CustomField>