force-app/main/default/objects/Unit_Response__c/fields/UserTrailBlazerID__c.field-meta.xml
<CustomField>
    <fullName>UserTrailBlazerID__c</fullName>
    <formula>CASESAFEID(Module_Response__r.User_Trailblazer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserTrailBlazerID</label>
    <type>Text</type>
</CustomField>